# space-sim

./: git syntax  temp function storage.txt
current model/: Planet.py  Player.py  gravitational_pull.py  main.py  menu.py  pyproject.toml
current model/menu/: menu.py  menu_state.py  state.py
current model/menu/config_menu/: check_input.py  config_menu.py
current model/src/: Planet.py  main.py  menu.py
current_model/: Planet.py  Player.py  collisions.py  game.py  main.py  update_event.py
current_model/Presets/: Preset.py  make_planet.py  preset_1.py
current_model/UI/: main_UI.py
current_model/UI/menu/: state.py
current_model/UI/menu/collisions_menu/: collision_menu.py
current_model/UI/menu/config_menu/: config_menu.py  input.py
current_model/UI/menu/main_menu/: input.py  menu.py
current_model/collisions/: collision_menu.py  collisions.py
current_model/entities/: Planet.py  Player.py  Presets.py
current_model/grid/: grid.py
current_model/menu/: menu.py  state.py
current_model/menu/config_menu/: config_menu.py  get_input.py
current_model/physics/: collisions.py  simulate.py
current_model/physics/simulation/: simulate.py  simulate_settings.py
main/src/: Player.py  main.py
old model/: old version v1.py
