[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-simulator"
version = "0.1.0"
description = "A space simulator made with pyray"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pyray",
    "math",
    "time",
]

authors = [
    { name = "Lucas" }
]

[tool.setuptools.packages.find]
where = [src]